--- a/_site.yml
+++ b/_site.yml
@@ -1,4 +1,4 @@
-output_dir: "."
+output_dir: "Science Class with Audrey and Wade"
 navbar:
   left:
     - text: "Home"
@@ -6,4 +6,6 @@ navbar:
     - text: "Wade"
       href: wade.html
     - text: "Audrey"
-      href: audrey.html 
+      href: Audrey.html 
+      
+output_dir: "."
